added Singleton and MonoState

--- a/designpatterns.ipynb
+++ b/designpatterns.ipynb
@@ -25,25 +25,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "G1Z934pxjiFf",
-        "outputId": "56e3fcd6-eeea-4451-aa2f-1ac19d0fd805"
+        "outputId": "634cebc0-ed4d-4f96-fb3a-01c5f5e0b372"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting pycodestyle\n",
-            "  Downloading pycodestyle-2.10.0-py2.py3-none-any.whl (41 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m41.3/41.3 KB\u001b[0m \u001b[31m1.3 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hInstalling collected packages: pycodestyle\n",
-            "Successfully installed pycodestyle-2.10.0\n",
+            "Requirement already satisfied: pycodestyle in /usr/local/lib/python3.8/dist-packages (2.10.0)\n",
             "Looking in indexes: https://test.pypi.org/simple/, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
-            "Collecting nbpep8\n",
-            "  Downloading https://test-files.pythonhosted.org/packages/c1/07/6b91c986efe7c3adac9e2ec061037f0cc4307925819d37277c3802c2d117/nbpep8-0.0.15-py3-none-any.whl (3.2 kB)\n",
-            "Installing collected packages: nbpep8\n",
-            "Successfully installed nbpep8-0.0.15\n"
+            "Requirement already satisfied: nbpep8 in /usr/local/lib/python3.8/dist-packages (0.0.15)\n"
           ]
         }
       ]
@@ -56,7 +49,7 @@
       "metadata": {
         "id": "Mit8isYEl_9a"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -410,7 +403,7 @@
         "id": "CKLmOM4MeGNW",
         "outputId": "8aa15bd6-b778-4a27-eb6c-8719c7266fc0"
       },
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -433,6 +426,116 @@
       "metadata": {
         "id": "AY3J6n9q5pnR"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Singleton Decorator"
+      ],
+      "metadata": {
+        "id": "rxUy65Zxr9dt"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def singleton(class_):\n",
+        "    instances = {}\n",
+        "\n",
+        "    def get_instances(*args, **kwargs):\n",
+        "        if class_ not in instances:\n",
+        "            instances[class_] = class_(*args, **kwargs)\n",
+        "        return instances[class_]\n",
+        "\n",
+        "    return get_instances\n",
+        "\n",
+        "\n",
+        "@singleton\n",
+        "class Database:\n",
+        "\n",
+        "    def __init__(self):\n",
+        "        print(\"loading resoursces\")\n",
+        "\n",
+        "\n",
+        "d1 = Database()\n",
+        "d2 = Database()\n",
+        "print(d1 == d2)\n",
+        "pep8(_ih)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-bTvrsZYsB72",
+        "outputId": "092c28e0-698d-4df2-a4e8-212c7ea86565"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{}\n",
+            "loading resoursces\n",
+            "{<class '__main__.Database'>: <__main__.Database object at 0x7fe573dd4910>}\n",
+            "True\n",
+            "\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### MonoState Design Pattern\n",
+        "- a shared state is used between All instances of an object. "
+      ],
+      "metadata": {
+        "id": "RG9Er2zm6FOp"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "class CEO:\n",
+        "\n",
+        "    shared_state = {\n",
+        "        \"name\" : \"morteza\" , \n",
+        "        \"age\" : 24\n",
+        "    }\n",
+        "\n",
+        "    def __init__(self):\n",
+        "        self.__dict__ = self.shared_state\n",
+        "    \n",
+        "    def __str__(self):\n",
+        "        return f\"{self.name} is {self.age} years old\"\n",
+        "\n",
+        "ceo1 = CEO()\n",
+        "ceo2 = CEO()\n",
+        "print(ceo1)\n",
+        "ceo2.name = \"yasser\"\n",
+        "print(ceo1)\n",
+        "print(ceo2)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "oTo4YtgT6VXd",
+        "outputId": "ec36448d-c856-4677-9dc5-da9045e32386"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "morteza is 24 years old\n",
+            "yasser is 24 years old\n",
+            "yasser is 24 years old\n"
+          ]
+        }
+      ]
     }
   ]
 }
